# google-ai-mcp

./: .gitignore  .mcpbignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile.backend  Dockerfile.frontend  README.md  build_mcpb.py  docker-compose.yml  e2e.ps1  google-ai-mcp-backend.spec  justfile  llms-full.txt  llms.txt  manifest.json  pyproject.toml  run_e2e.ps1  run_e2e_full.bat  run_e2e_headless.bat  run_server.py  start.bat  start.ps1
.github/workflows/: ci.yml
assets/prompts/: examples.json  system.md  user.md
docker/: nginx.conf
native/: Cargo.toml  build-sidecar.ps1  build.ps1  tauri.conf.json
native/icons/: icon.icns
native/src/: main.rs
scripts/: kill-zombies.ps1
src/google_ai_mcp/: __init__.py  chat_client.py  clients_registry.py  compat_routes.py  embeddings_client.py  imagen_client.py  logging_service.py  lyria_client.py  omni_client.py  paths.py  picture_client.py  schemas.py  server.py  speech_client.py  state.py  veo_client.py  web.py
tests/: conftest.py  test_server.py
webapp/: biome.json  fix_types.bat  index.html  install_all_deps.bat  install_deps.bat  install_types.bat  package-lock.json  package.json  playwright.config.ts  setup.bat  setup_project.bat  setup_ui.bat  start.ps1  tsconfig.json  tsconfig.json.bak  vite.config.ts
webapp/e2e/: google-ai-mcp.spec.ts
webapp/public/: index.html
webapp/scripts/: build.js  set-build-time.js
webapp/src/: App.tsx  vite-env.d.ts
webapp/src/assets/persons/: index.ts
webapp/src/components/common/: LogViewer.tsx
webapp/src/theme/: index.ts
webapp/src/types/: persona.ts
(+27 files in other folders)
